crates/strider/tests/snapshots/arm_be__floats__f64_arith.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "6" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "7" -> "6" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x3ff0000000000000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "11" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "12" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Div:f64", shape=box, fillcolor="#1a3020"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "7" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Neg\nf64 → f64", shape=box, fillcolor="#1a3020"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Mul:f64", shape=box, fillcolor="#1a3020"];
  "18" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "8" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "19" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "21" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
